tests/compError/fnWithNoReturnType.ucl
// compError
// error: functions must have a return type
// line:5 -> here

test = fn() {
	1
}